# token-usage-board

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-07-23-token-usage-board.md
docs/superpowers/specs/: 2026-07-23-token-usage-board-design.md
scripts/: gen-icons.mjs
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: credential.rs  lib.rs  main.rs  refresher.rs  state.rs  tray.rs
src-tauri/src/provider/: mimo.rs  mod.rs
src-tauri/tests/fixtures/: mimo_detail.json  mimo_list.json  mimo_usage.json
