[package]
name = "token-usage-board"
version = "0.1.0"
description = "A Windows tray board that shows Token Plan usage (first: Xiaomi MiMo)."
authors = ["token-usage-board contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.90"

[lib]
name = "token_usage_board_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
keyring = "3"

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent"] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
